Profile alignment fixed

--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -105,4 +105,29 @@
 		margin-left: 1rem;
 		font-size: smaller;
 	}
+	.view-profile-container {
+		margin-top: 0;
+		margin-left: 0;
+		padding: 0;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin-left: -1.5rem;
+	}
+	.profile-picture {
+		margin-left: 0rem;
+		width: auto;
+	}
+	.side-text-holder {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.name {
+		margin-left: 0;
+	}
+	.detail-text {
+		margin-left: 0;
+	}
 }
